[package]
name = "astral-flow-meter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
iced = { version = "0.13.1", features = ["canvas", "tokio"] }
libloading = "0.8.6"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
