[package]
name = "astral-flow-meter"
version = "0.1.0"
edition = "2024"
resolver = "3"

[features]
embed-dll = []

[dependencies]
anyhow = "1.0.98"
iced = { version = "0.13.1", features = ["canvas", "tokio"] }
libloading = "0.8.8"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
axum = "0.8.9"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
